--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  text-align: center;
+
 }
 
 h1 {
@@ -63,4 +65,3 @@ td.blue {
   transform: translate(0, 2px);
   box-shadow: 0 0;
 }
-
